# sigil

./: .gitignore  CMakeLists.txt  README.md
data/: mat7.txt
include/: glfw_adapter.hpp  logger.hpp  query.hpp  resource.hpp  result.hpp  shader.hpp  specs.hpp  vk_adapter.hpp
src/: CMakeLists.txt  cli.cpp  initialize.cpp  main.cpp  render.cpp  sigil.cpp  sigil.hpp  update.cpp
src/framework/: query.cpp  shader.cpp
src/glsl/: CMakeLists.txt  shader.frag  shader.vert
